--- a/HandBrakeCLI_Colab.ipynb
+++ b/HandBrakeCLI_Colab.ipynb
@@ -502,14 +502,14 @@
         "id": "CCn6s3RvzO9o"
       },
       "source": [
-        "#@title Extract 🎼Audio from Video 🎞 { display-mode: \"form\" }\n",
+        "#@title metadata 🎼Audio from Video 🎞 { display-mode: \"form\" }\n",
         "import os\n",
         "Input_File = \"Paste/Path/to/video_file.mp4\" #@param {type:\"string\"}\n",
         "Output_File_Name = \"extracted_audio.mp3\" #@param {type:\"string\"}\n",
         "fPath = os.path.dirname(Input_File) +'/'+ Output_File_Name\n",
         "\n",
         "\n",
-        "!ffmpeg -i Input_File -vn -acodec copy fPath\n",
+        "!ffmpeg -i Input_File -map 0 -c copy -metadata:s:v:0 title="NITHIN / RAHUL" -metadata:s:a:0 title="NITHIN / RAHUL" -metadata:s:a:0 Language=Kn -metadata:s:s:0 title="NITHIN / RAHUL" -metadata:s:s:0 language=En fPath\n",
         "#@markdown >#####  Save file name with extension like .mp3, .aac "
       ],
       "execution_count": null,
